added test and a lit refactor

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.tomcat.accesslog.enabled=true
-server.tomcat.accesslog.directory=D:/My Documents/JackWorkSpace/LogTesting/logs/accesslogs
+server.tomcat.accesslog.directory=E:/KaKit tools/LogTest/logs/accesslogs
 server.tomcat.accesslog.suffix=.log
 server.tomcat.accesslog.prefix=logtest-accesslog
 server.tomcat.accesslog.file-date-format=-yyyy-MM-dd
