--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@ plugins {
 	id 'org.springframework.boot' version '2.3.2.RELEASE'
 	id 'io.spring.dependency-management' version '1.0.8.RELEASE'
 	id 'java'
+	id "com.github.johnrengelman.processes" version "0.5.0"
+	id "org.springdoc.openapi-gradle-plugin" version "1.3.0"
 }
 
 group = 'com.csjack'
@@ -10,6 +12,12 @@ sourceCompatibility = '1.8'
 
 repositories {
 	mavenCentral()
+}
+
+openApi {
+	apiDocsUrl.set("http://localhost:8083/v3/api-docs")
+	outputFileName.set("openapi.yml")
+	waitTimeInSeconds.set(10)
 }
 
 configurations.all {
@@ -27,6 +35,8 @@ dependencies {
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
 	}
+	// https://mvnrepository.com/artifact/org.springdoc/springdoc-openapi-ui
+	implementation group: 'org.springdoc', name: 'springdoc-openapi-ui', version: '1.4.8'
 
 	compileOnly 'org.projectlombok:lombok:1.18.12'
 	annotationProcessor 'org.projectlombok:lombok:1.18.12'
